src/semantic/tests/data/negative/duplicate-dict-keys-1.hsh
@[
	foo: 1,
	bar: 2,
	foo: 3,
]
